<resources>
    <string name="app_name">USee</string>

    <string name="action_settings">Settings</string>
    <string name="action_share">Share</string>
    <string name="title_activity_send_msg">SendMsg</string>
    <string name="title_activity_comment">CommentActivity</string>

    <string name="title_activity_drawer" translatable="false">DrawerActivity</string>

    <string name="navigation_drawer_open" translatable="false">Open navigation drawer</string>
    <string name="navigation_drawer_close" translatable="false">Close navigation drawer</string>
    <string name="nav_drawer_share">Share</string>
    <string name="nav_drawer_send">Send</string>
    <string name="about">about</string>
    <string name="about_context" translatable="false">Usee\n2016.03.03</string>
    <string name="title_activity_splash" translatable="false">SplashActivity</string>
    <string name="searchTag">input tag name</string>
    <string name="tag_name">tag_name</string>
    <string name="user_tag">user tag</string>
    <string name="cancel">Cancel</string>
    <string name="ok">OK</string>
    <string name="title_activity_talk">TalkActivity</string>
    <string name="notify">notify</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general" translatable="false">General</string>

    <string name="pref_title_social_recommendations" translatable="false">Enable social recommendations</string>
    <string name="pref_description_social_recommendations" translatable="false">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name" translatable="false">Display name</string>
    <string name="pref_default_display_name" translatable="false">John Smith</string>

    <string name="pref_title_add_friends_to_messages" translatable="false">Add friends to messages</string>

    <string name="pref_header_data_sync" translatable="false">Data &amp; sync</string>

    <string name="pref_title_sync_frequency" translatable="false">Sync frequency</string>

    <string name="pref_title_system_sync_settings" translatable="false">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications" translatable="false">Notifications</string>

    <string name="pref_title_new_message_notifications" translatable="false">New message notifications</string>

    <string name="pref_title_ringtone" translatable="false">Ringtone</string>
    <string name="pref_ringtone_silent" translatable="false">Silent</string>

    <string name="pref_title_vibrate" translatable="false">Vibrate</string>
    <string name="more">More</string>
    <string name="about_me_notify">About Me</string>
    <string name="allchoose">All</string>
    <string name="add_tag">Add Tag</string>
    <string name="send_msg">Send Message</string>
    <string name="deadline">Deadline</string>
    <string name="theme_setting">Theme Setting</string>
    <string name="about_us">About us</string>
    <string name="head_settings">Picture settings</string>
    <string name="push_settins">Whether open the push</string>
    <string name="about_us_title">About us</string>
    <string name="about_us_content">Usee\n\n Weixin: USee弹吧\n 2016.08.25</string>
    <string name="tag_buissness">Activity</string>
    <string name="base_tag">Base Tag</string>
    <string name="feedBack">Feed Back</string>
    <string name="title_activity_talk2" translatable="false">Talk2Activity</string>
    <string name="title_activity_danmu_detail" translatable="false">DanmuDetailActivity</string>
    <string name="title_activity_choose_tag_new" translatable="false">ChooseTagNewActivity</string>
    <string name="activity_create_tag" translatable="false">创建话题</string>
    <string name="create_tag_tip" translatable="false">2-15字，支持中英文、数字</string>
    <string name="strExecute" translatable="false">执行SQL</string>
    <string name="strAdd" translatable="false">新增</string>
    <string name="strDelete" translatable="false">删除</string>
    <string name="strUpdate" translatable="false">修改</string>
    <string name="strQuery1" translatable="false">数据查询</string>
    <string name="strQuery2" translatable="false">统计查询</string>
    <string name="strQuery3" translatable="false">比较查询</string>
    <string name="strInputSqlHint" translatable="false">update Orders set OrderPrice = 100 where Id = 6</string>
    <string name="strInputSql" translatable="false">请输入SQL语句</string>
    <string name="strErrorSql" translatable="false">执行出错，请检查SQL语句</string>
    <string name="strSuccessSql" translatable="false">执行SQL语句成功</string>
    <string name="strUnableSql" translatable="false">Sorry，还没处理select语句</string>
    <string name="create_tag_description_tip" translatable="false">30字以内，让大家快速了解话题主旨</string>
    <string name="location_fail">定位失败,请打开定位功能后,重启应用</string>
    <string name="location_fail_no_network">定位失败,请检测网络</string>
    <string name="no_login_no_create_tag" translatable="false">您还未登录,不能创建话题</string>
    <string name="refresh_no_network" translatable="false">网络连接不成功，请稍后再试</string>
    <string name="no_login_into_mymsg">请登录后执行此操作</string>
    <string name="name_no_null">昵称不能为空</string>
    <string name="account_has_used" translatable="false">此账号已被绑定使用过</string>
    <string name="bind_success" translatable="false">绑定成功</string>
    <string name="change_usericon_success" translatable="false">修改头像成功</string>
    <string name="change_usericon_fail">修改头像失败,请重试.</string>
    <string name="get_topic_id_fail" translatable="false">获取话题信息失败</string>
    <string name="input_no_null" translatable="false">输入内容不能为空</string>
    <string name="send_danmu_success" translatable="false">发送弹幕成功</string>
    <string name="comment_no_null" translatable="false">评论内容不能为空</string>
    <string name="dialog_tip_no_network" translatable="false">未连接网络 请检查WIFI或数据是否开启</string>
    <string name="no_unlike">不踩了</string>
    <string name="action_failed" translatable="false">操作失败，请稍后重试</string>
    <string name="like_success" translatable="false">赞了一下</string>
    <string name="unlike_success" translatable="false">踩了一下</string>
    <string name="cancel_unlike_success" translatable="false">不踩了</string>

    <string name="enter_danmu_hint">输入弹幕内容</string>
    <string name="anonymous">[匿名]</string>
    <string name="account_manager">账户管理</string>
    <string name="user_icon">头像</string>
    <string name="nickname">昵称</string>
    <string name="gender">性别</string>
    <string name="male">男</string>

    <string name="female">女</string>

    <string name="cellphone">手机号</string>

    <string name="not_bind">n/a</string>
    <string name="wechat">微信</string>
    <string name="sina_weibo">新浪微博</string>
    <string name="logout">退出登录</string>
    <string name="my_topics">我的话题</string>
    <string name="nearby_topics">周边话题</string>

    <string name="message_center">消息提醒</string>
    <string name="comment">评论</string>
    <string name="reply">回复</string>
    <string name="private_reply">悄悄回复</string>
    <string name="private_comment">悄悄评论</string>
    <string name="days_ago">天前</string>

    <string name="user_info">用户信息</string>
    <string name="participated_topics">TA参与过的话题</string>

    <string name="danmu_details">弹幕详情</string>
    <string name="private_string">悄悄</string>

    <string name="within_start">发布于</string>
    <string name="within_m_end">m以内</string>
    <string name="within_km_end">km以内</string>
    <string name="comment_with_dots">评论...</string>

</resources>
