<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:background="@drawable/dialog_bg_corner_8dp"
    android:orientation="vertical"
    android:layout_height="match_parent">
    <TextView
        android:text="@string/add_tag"
        android:textSize="18sp"
        android:textColor="@color/primary_text"
        android:paddingBottom="8dp"
        android:paddingTop="5dp"
        android:background="?attr/top_layout_color"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <EditText
            android:id="@+id/et_add_tag"
            android:hint="输入标签名"
            android:textColor="@color/tag_item_text_normal_light"
            android:maxLength="10"
            android:layout_marginRight="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:layout_marginLeft="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        <TextView
            android:id="@+id/tv_reset"
            android:layout_marginRight="30dp"
            android:layout_marginTop="35dp"
            android:text="(还剩10个字)"
            android:textSize="13sp"
            android:textStyle="italic"
            android:layout_alignParentRight="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </RelativeLayout>

    <EditText
        android:id="@+id/description"
        android:hint="输入标签的描述(可选)"
        android:textColor="@color/tag_item_text_normal_light"
        android:layout_marginRight="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <RelativeLayout
        android:layout_marginTop="10dp"
        android:paddingRight="10dp"
        android:paddingLeft="10dp"
        android:paddingBottom="10dp"
        android:paddingTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <Button
            android:id="@+id/bt_cancel"
            android:layout_alignParentLeft="true"
            android:text="@string/cancel"
            android:textSize="20sp"
            android:background="@drawable/cancel_button"
            android:layout_width="@dimen/dialog_button_width"
            android:layout_height="@dimen/dialog_button_height" />
        <Button
            android:id="@+id/bt_ok"
            android:layout_alignParentRight="true"
            android:text="@string/ok"
            android:textSize="20sp"
            android:background="@drawable/ok_button"
            android:layout_width="@dimen/dialog_button_width"
            android:layout_height="@dimen/dialog_button_height" />
    </RelativeLayout>

</LinearLayout>
