<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#f4f4f4"
    android:fitsSystemWindows="true"
    tools:context="com.white.usee.app.activity.AccountActivity">

    <RelativeLayout
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/title"
        android:paddingRight="@dimen/px_thirdty_two">

        <ImageButton
            android:id="@+id/title_back"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/px_ninety_six"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_centerVertical="true"
            android:background="@drawable/iv_background"
            android:paddingBottom="@dimen/px_twenty_four"
            android:paddingLeft="@dimen/title_back_padLeft"
            android:paddingTop="@dimen/px_twenty_four"
            android:scaleType="fitCenter"
            android:src="@drawable/back" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="2dp"
            android:layout_toRightOf="@id/title_back"
            android:text="@string/account_manager"
            android:textColor="#f4f4f4"
            android:textSize="@dimen/sp_eighteen" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/rl_head"
        android:layout_below="@id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/px_thirdty_two">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:text="@string/user_icon"
            android:textColor="#816d64"
            android:textSize="16sp" />

        <ImageView
            android:id="@+id/iv_head"
            android:layout_width="@dimen/px_ninety_six"
            android:layout_height="@dimen/px_ninety_six"
            android:layout_alignParentRight="true"
            android:scaleType="fitXY"
            android:background="@android:color/transparent"
            android:src="@drawable/default_head" />
    </RelativeLayout>

    <View
        android:layout_below="@id/rl_head"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginLeft="@dimen/px_thirdty_two"
        android:layout_marginRight="@dimen/px_thirdty_two"
        android:background="#cfcfcf" />

    <RelativeLayout
        android:layout_below="@id/rl_head"
        android:id="@+id/rl_clearCache"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/px_thirdty_two">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:text="@string/nickname"
            android:textColor="#816d64"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/tv_user_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:text="蜡笔小新"
            android:textColor="#b1b1b1"
            android:textSize="16sp" />
    </RelativeLayout>

    <View
        android:layout_below="@id/rl_clearCache"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginLeft="@dimen/px_thirdty_two"
        android:layout_marginRight="@dimen/px_thirdty_two"
        android:background="#cfcfcf" />

    <RelativeLayout
        android:layout_below="@id/rl_clearCache"
        android:id="@+id/rl_checkversion"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/px_thirdty_two">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:text="@string/gender"
            android:textColor="#816d64"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/tv_version"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:text="@string/male"
            android:textColor="#b1b1b1"
            android:textSize="16sp" />
    </RelativeLayout>

    <View
        android:layout_below="@id/rl_checkversion"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginLeft="@dimen/px_thirdty_two"
        android:layout_marginRight="@dimen/px_thirdty_two"
        android:background="#cfcfcf" />

    <RelativeLayout
        android:layout_below="@id/rl_checkversion"
        android:id="@+id/rl_about_me"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/px_thirdty_two">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:text="@string/cellphone"
            android:textColor="#816d64"
            android:textSize="16sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:ellipsize="middle"
            android:id="@+id/tv_phonenum"
            android:text="183***70"
            android:textColor="#b1b1b1"
            android:textSize="16sp" />
    </RelativeLayout>

    <View
        android:layout_below="@id/rl_about_me"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginLeft="@dimen/px_thirdty_two"
        android:layout_marginRight="@dimen/px_thirdty_two"
        android:background="#cfcfcf" />

    <RelativeLayout
        android:layout_below="@id/rl_about_me"
        android:id="@+id/rl_is_push"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/px_thirdty_two">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:text="@string/wechat"
            android:textColor="#816d64"
            android:textSize="16sp" />

        <ToggleButton
            android:id="@+id/toogle_is_push"
            android:layout_width="@dimen/px_ninety_six"
            android:layout_height="@dimen/px_forty_eight"
            android:layout_alignParentRight="true"
            android:layout_gravity="center_horizontal"
            android:background="@android:color/transparent"
            android:button="@drawable/ios7_btn"
            android:checked="false"
            android:text=""
            android:textOff=""
            android:textOn="" />
    </RelativeLayout>

    <View
        android:layout_below="@id/rl_is_push"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginLeft="@dimen/px_thirdty_two"
        android:layout_marginRight="@dimen/px_thirdty_two"
        android:background="#cfcfcf" />
    <RelativeLayout
        android:id="@+id/rl_qq"
        android:layout_below="@id/rl_is_push"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/px_thirdty_two">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:text="QQ"
            android:textColor="#816d64"
            android:textSize="16sp" />

        <ToggleButton
            android:id="@+id/toogle_qq"
            android:layout_width="@dimen/px_ninety_six"
            android:layout_height="@dimen/px_forty_eight"
            android:layout_alignParentRight="true"
            android:layout_gravity="center_horizontal"
            android:background="@android:color/transparent"
            android:button="@drawable/ios7_btn"
            android:checked="false"
            android:text=""
            android:textOff=""
            android:textOn="" />
    </RelativeLayout>

    <View
        android:layout_below="@id/rl_qq"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginLeft="@dimen/px_thirdty_two"
        android:layout_marginRight="@dimen/px_thirdty_two"
        android:background="#cfcfcf" />
    <RelativeLayout
        android:layout_below="@id/rl_qq"
        android:id="@+id/rl_weibo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/px_thirdty_two">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:text="@string/sina_weibo"
            android:textColor="#816d64"
            android:textSize="16sp" />

        <ToggleButton
            android:id="@+id/toogle_weibo"
            android:layout_width="@dimen/px_ninety_six"
            android:layout_height="@dimen/px_forty_eight"
            android:layout_alignParentRight="true"
            android:layout_gravity="center_horizontal"
            android:background="@android:color/transparent"
            android:button="@drawable/ios7_btn"
            android:checked="false"
            android:text=""
            android:textOff=""
            android:textOn="" />
    </RelativeLayout>

    <View
        android:layout_below="@id/rl_weibo"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginLeft="@dimen/px_thirdty_two"
        android:layout_marginRight="@dimen/px_thirdty_two"
        android:background="#cfcfcf" />

    <Button
        android:layout_below="@id/rl_weibo"
        android:id="@+id/bt_logout"
        android:layout_width="match_parent"
        android:text="@string/logout"
        android:elevation="0dp"
        android:textColor="#f37e53"
        android:textSize="16sp"
        android:paddingBottom="13dp"
        android:paddingTop="13dp"
        android:background="@drawable/register_bg"
        android:layout_marginTop="@dimen/px_ninety_six"
        android:layout_marginLeft="@dimen/px_thirdty_two"
        android:layout_marginRight="@dimen/px_thirdty_two"
        style="?android:borderlessButtonStyle"
        android:layout_height="wrap_content" />
    <View
        android:layout_width="match_parent"
        android:background="@color/view_mesh"
        android:layout_below="@id/toolbar"
        android:id="@+id/view_mesh"
        android:visibility="gone"
        android:layout_height="match_parent"/>
</RelativeLayout>
