<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#f4f4f4"
    android:fitsSystemWindows="true"
    tools:context="com.white.usee.app.activity.AccountActivity">

    <RelativeLayout
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/title"
        android:paddingRight="@dimen/px_thirdty_two">

        <ImageButton
            android:id="@+id/title_back"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/px_ninety_six"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_centerVertical="true"
            android:background="@drawable/iv_background"
            android:paddingBottom="@dimen/px_twenty_four"
            android:paddingLeft="@dimen/title_back_padLeft"
            android:paddingTop="@dimen/px_twenty_four"
            android:scaleType="fitCenter"
            android:src="@drawable/back"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="2dp"
            android:layout_toRightOf="@id/title_back"
            android:text="@string/user_info"
            android:textColor="#f4f4f4"
            android:textSize="@dimen/sp_eighteen"/>

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/rl_head"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/toolbar"
        android:padding="@dimen/px_thirdty_two">

        <ImageView
            android:id="@+id/iv_head_icon"

            android:layout_width="@dimen/px_ninety_six"
            android:layout_height="@dimen/px_ninety_six"
            android:layout_alignParentRight="true"
            android:background="@android:color/transparent"
            android:scaleType="fitXY"
            android:src="@drawable/default_head"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/user_icon"
            android:textColor="#816d64"
            android:textSize="16sp"
            android:layout_centerVertical="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:id="@+id/textView2"/>
    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_below="@id/rl_head"
        android:layout_marginLeft="@dimen/px_thirdty_two"
        android:layout_marginRight="@dimen/px_thirdty_two"
        android:background="#cfcfcf"/>

    <RelativeLayout
        android:id="@+id/rl_clearCache"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/rl_head"
        android:padding="@dimen/px_thirdty_two">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:text="@string/nickname"
            android:textColor="#816d64"
            android:textSize="16sp"/>

        <TextView
            android:id="@+id/tv_nick_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:text=""
            android:textColor="#b1b1b1"
            android:textSize="16sp"/>
    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_below="@id/rl_clearCache"
        android:layout_marginLeft="@dimen/px_thirdty_two"
        android:layout_marginRight="@dimen/px_thirdty_two"
        android:background="#cfcfcf"/>

    <RelativeLayout
        android:id="@+id/rl_checkversion"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/rl_clearCache"
        android:padding="@dimen/px_thirdty_two">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:text="@string/gender"
            android:textColor="#816d64"
            android:textSize="16sp"/>

        <TextView
            android:id="@+id/tv_gender"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:text=""
            android:textColor="#b1b1b1"
            android:textSize="16sp"/>
    </RelativeLayout>

    <View
        android:id="@+id/view_divider"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_below="@id/rl_checkversion"
        android:layout_marginLeft="@dimen/px_thirdty_two"
        android:layout_marginRight="@dimen/px_thirdty_two"
        android:background="#cfcfcf"/>

    <RelativeLayout
        android:id="@+id/rl_user_like_topic"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/rl_checkversion"
        android:padding="@dimen/px_thirdty_two">

        <TextView
            android:id="@+id/tv_user_like_topic"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:textColor="#816d64"
            android:textSize="16sp"/>
    </RelativeLayout>

    <ScrollView
        android:layout_below="@id/rl_user_like_topic"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <com.white.usee.app.view.WrapLineLayout
            android:id="@+id/wrapLY_user_like_topic"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:layout_marginLeft="@dimen/px_sixteen"
            android:layout_marginRight="@dimen/px_thirdty_two">

        </com.white.usee.app.view.WrapLineLayout>
    </ScrollView>


</RelativeLayout>